# enclave-dspy

./: .env.example  .gitignore  README.md  optimization_config.yaml  pyproject.toml
datasets/architecture-scanner/: dev.jsonl  test.jsonl  train.jsonl
datasets/attack-surface-mapper/: dev.jsonl  test.jsonl  train.jsonl
datasets/attack-surface-mapper:recovery/: train.jsonl
datasets/chat-assistant/: dev.jsonl  test.jsonl  train.jsonl
datasets/diff-analyzer/: dev.jsonl  test.jsonl  train.jsonl
datasets/finding-dedup-checker/: dev.jsonl  test.jsonl  train.jsonl
datasets/finding-verifier/: dev.jsonl  test.jsonl  train.jsonl
datasets/memory-extractor/: dev.jsonl  test.jsonl  train.jsonl
datasets/security-analyst/: dev.jsonl  test.jsonl  train.jsonl
docs/: usage.md
docs/superpowers/plans/: 2026-04-02-enclave-dspy.md
docs/superpowers/specs/: 2026-04-02-enclave-dspy-design.md
exports/: chat-assistant.md
optimized/chat-assistant/: v1.json  v2.json
scripts/: cli.py  compare.py  data_cmd.py  evaluate.py  export_cmd.py  ingest.py  optimize.py
src/: config.py
src/data/: braintrust_etl.py  loader.py  synthetic.py
src/export/: exporter.py
src/ingestion/: models.py  parser.py
src/metrics/: domain.py  generic.py  judge.py
src/modules/: factory.py
src/optimizers/: runner.py
src/signatures/: factory.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_exporter.py  test_loader.py  test_metrics.py  test_models.py  test_module_factory.py  test_parser.py  test_signature_factory.py
