[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enclave-dspy"
version = "0.1.0"
description = "DSPy-based prompt optimization pipeline for Enclave security agents"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6",
    "pydantic>=2.0",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
enclave-dspy = "scripts.cli:cli"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
